--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,25 +14,30 @@
     margin-left: 255px;
     padding-top: 56px;
 }
-.section{
-    display: flex;
-    flex-direction: column;
+.imagen{
+    width: 70px;
+    height: 70px;
+    background-color:#0076BD;
+    border-radius:50%;
 }
-
 .text{
     width:220px;
     text-align: center;
 }
+.link{
+    display: block;
+    width: 70px;
+    
+}
 .img{
-    margin-left: 75px;
-    border-radius:100px;
-    background-color:#0076BD;
+  margin: 0 auto;
     padding:20px;
     opacity: 0.8;
 }
-.img:hover{
+.imagen:hover{
     background-color:white;
     border:2px solid #0076BD;
+    border-radius:50%;
 }
 .heading{
     text-transform:uppercase;
